Fixed long url wrapping issue

--- a/src/styles/modules/_global.scss
+++ b/src/styles/modules/_global.scss
@@ -278,4 +278,6 @@ body {
   width: 100%;
 }
 
-
+.post a {
+  overflow-wrap: break-word;
+}
